testsuite/tests/jane-modular-syntax/user_error3_2.compilers.reference
File "user_error3_2.ml", line 9, characters 31-48:
9 | let _misnamed_extension = () [@jane.non_erasable];;
                                   ^^^^^^^^^^^^^^^^^
Error: Cannot have an attribute named [@jane.non_erasable]: Missing a feature component
